fix: refinements to popup UI
Fixes #874

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -187,7 +187,7 @@
         <div class='sidecar-bottom-stripe zoomable'>
           <div class='sidecar-bottom-stripe-left-bits'>
             <div class='sidecar-bottom-stripe-back-bits sidecar-bottom-stripe-button-container'>
-              <div class='sidecar-bottom-stripe-button'>
+              <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-back-button'>
                 <div class='graphical-icon'><i class='fas fa-angle-double-left'></i></div>
                 <div class='sidecar-bottom-stripe-back-inner-bits'></div>
               </div>
@@ -196,7 +196,7 @@
           </div>
           <div class='sidecar-screenshot-button sidecar-bottom-stripe-button sidecar-bottom-stripe-maximize screenshot-button'> <!-- screenshot button -->
             <div class='graphical-icon'
-                 data-balloon='Capture Screenshot' data-balloon-length="medium" data-balloon-pos="up">
+                 data-balloon='Capture Screenshot' data-balloon-length="medium" data-balloon-pos="up-right">
               <i class='fas fa-camera'></i>
             </div>
           </div>
