--- a/plugins/plugin-grid/web/css/table.css
+++ b/plugins/plugin-grid/web/css/table.css
@@ -406,7 +406,7 @@
 
 /** grid view */
 .activation-viz-plugin .grid-grid:not(.activation-viz-timeline) {
-    margin: 0.5em 0 0.5em 0.5em;  /* has to be margin, not padding; see shell issue #874; no right margin for scrollbar flush right */
+    /* margin: 0.5em 0 0.5em 0.5em; */ /* has to be margin, not padding; see shell issue #874; no right margin for scrollbar flush right */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
