feat(packages/app): popup window should offer an <input>
Fixes #878

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -99,6 +99,7 @@
                       <span class='package-prefix'></span>
                       <span class='entity-name-line'>
                         <span class='entity-name'></span>
+                        <input class='repl-input-like sidecar-header-input'></input>
                       </span>
                     </span>
 	          </div>
