--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -189,35 +189,39 @@
           <div class='sidecar-bottom-stripe-left-bits'>
             <div class='sidecar-bottom-stripe-back-bits sidecar-bottom-stripe-button-container'>
               <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-back-button'>
-                <div class='graphical-icon'><i class='fas fa-angle-double-left'></i></div>
+                <div class='graphical-icon'><i class='fas fa-chevron-left'></i></div>
                 <div class='sidecar-bottom-stripe-back-inner-bits'></div>
               </div>
             </div> <!-- back button -->
             <div class='sidecar-bottom-stripe-mode-bits sidecar-bottom-stripe-button-container'></div> <!-- mode switch buttons -->
           </div>
-          <div class='sidecar-screenshot-button sidecar-bottom-stripe-button sidecar-bottom-stripe-maximize screenshot-button'> <!-- screenshot button -->
-            <div class='graphical-icon'
-                 data-balloon='Capture Screenshot' data-balloon-length="medium" data-balloon-pos="up-right">
+          
+          <!-- screenshot button -->
+          <div class='sidecar-screenshot-button sidecar-bottom-stripe-button sidecar-bottom-stripe-maximize screenshot-button'
+               data-balloon='Capture Screenshot' data-balloon-length="medium" data-balloon-pos="up-right">
+            <div class='graphical-icon'>
               <i class='fas fa-camera'></i>
             </div>
           </div>
-          <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-maximize toggle-sidecar-maximization-button'> <!-- maximize button -->
+
+          <!-- maximize button -->
+          <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-maximize toggle-sidecar-maximization-button'>
             <span class='maximize-button-label'><div class='graphical-icon' data-balloon='Expand to full width' data-balloon-length="medium" data-balloon-pos="up-right"><i class='far fa-window-maximize'></i></div></span>
             <span class='unmaximize-button-label'><div class='graphical-icon' data-balloon='Restore split screen' data-balloon-length="medium" data-balloon-pos="up-right"><i class='fas fa-columns'></i></div></span>
           </div>
 
           <!-- close button -->
-          <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-close toggle-sidecar-button'>
-            <div class='graphical-icon'
-                 data-balloon="Expose the command line" data-balloon-length="long" data-balloon-pos="up-right">
+          <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-close toggle-sidecar-button'
+               data-balloon="Expose the command line" data-balloon-length="long" data-balloon-pos="up-right">
+            <div class='graphical-icon'>
               <i class='fas fa-angle-double-right'></i>
             </div>
           </div>
 
           <!-- Quit/Done button -->
-          <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-quit'>
-            <div class="graphical-icon"
-                 data-balloon='Close this popup' data-balloon-length="medium" data-balloon-pos="up-right">
+          <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-quit'
+               data-balloon='Close this popup' data-balloon-length="medium" data-balloon-pos="up-right">
+            <div class="graphical-icon">
               <i class="fas fa-sign-out-alt"></i>
             </div>
           </div>
