--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -175,8 +175,12 @@
 	    <div class='rule-components small-node-count-canvas horizontal-canvas'></div>
 	  </div>
 	  <div class='package-content'>
-	    <ul class='package-action-list repl-result result-table'></ul>
-	    <ul class='package-feed-list repl-result result-table'></ul>
+            <div class='result-as-table'>
+	      <div class='package-action-list repl-result result-table'></div>
+            </div>
+            <div class='result-as-table'>
+	      <div class='package-feed-list repl-result result-table'></div>
+            </div>
 	    <pre><code class='package-source'></code></pre>
 	  </div>
 	  <div class='trigger-content'>
