fix(packages/app): several UI fixes for back button
Fixes #910

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -192,8 +192,9 @@
         <div class='sidecar-bottom-stripe zoomable'>
           <div class='sidecar-bottom-stripe-left-bits'>
             <div class='sidecar-bottom-stripe-back-bits sidecar-bottom-stripe-button-container'>
-              <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-back-button'>
-                <div class='graphical-icon'><i class='fas fa-chevron-left'></i></div>
+              <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-back-button'
+                   data-balloon-pos='up-left'>
+                <div class='graphical-icon'><i class='fas fa-arrow-left'></i></div>
                 <div class='sidecar-bottom-stripe-back-inner-bits'></div>
               </div>
             </div> <!-- back button -->
