fix: make sidecar header repl look more like a repl
this also adds 'hide-with-screenshot' css support

Fixes #912

--- a/plugins/plugin-core-support/web/css/screenshot.css
+++ b/plugins/plugin-core-support/web/css/screenshot.css
@@ -5,6 +5,10 @@
     padding: 0 1em 1em;
 }
 
+.screenshot-squish .hide-with-screenshot {
+    display: none;
+}
+
 body.no-tooltips-anywhere [data-balloon]:before, body.no-tooltips-anywhere [data-balloon]:after {
     display: none !important;
 }
