--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -71,7 +71,7 @@
 	      <input type="text"
                      autofocus
                      autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
-                     xxx_no_placeholder="enter your command" autocomplete="off">
+                     xxx_no_placeholder="enter your command">
               <span class='repl-prompt-right-elements'>
                 <span class='repl-prompt-timestamp deemphasize'></span>
                 <i class='fas fa-square repl-prompt-right-element-icon deemphasize'></i>
@@ -99,7 +99,15 @@
                       <span class='package-prefix'></span>
                       <span class='entity-name-line'>
                         <span class='entity-name'></span>
-                        <input class='repl-input-like sidecar-header-input'></input>
+
+	                <div class="repl-input">
+                          <div class="repl-prompt hide-with-screenshot"><span class="repl-prompt-righty"><i class="fas fa-angle-right"></i></span></div>
+                          <input type="text"
+                                 autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
+                                 placeholder="enter your command"
+                                 class="repl-input-like sidecar-header-input">
+                        </div>
+
                       </span>
                     </span>
 	          </div>
