--- a/plugins/plugin-core-support/web/css/screenshot.css
+++ b/plugins/plugin-core-support/web/css/screenshot.css
@@ -31,6 +31,10 @@ body.no-tooltips-anywhere [data-balloon]:before, body.no-tooltips-anywhere [data
     position: absolute;
     color: var(--color-ok);
     font-size: 20vmin;
+    filter: brightness(1.375)  drop-shadow(0px 0px 1vmin var(--color-text-02));
+}
+body[kui-theme-style="dark"] .screenshot-check-icon {
+    filter: brightness(1.75)  drop-shadow(0px 0px 1vmin var(--color-text-02));
 }
 .screenshot-check-icon i {
     text-shadow: 0 0 0.1ex var(--color-base02);
