feat(plugins/plugin-bash-like): do not show line numbers in git diff view
Fixes #944

--- a/plugins/plugin-bash-like/web/css/my-diff2html.css
+++ b/plugins/plugin-bash-like/web/css/my-diff2html.css
@@ -52,6 +52,11 @@ td > .d2h-code-side-linenumber {
     border-color: var(--color-content-divider);
 }
 
+/* no line number support */
+.d2h-wrapper .d2h-code-linenumber {
+    display: none;
+}
+
 .d2h-code-linenumber {
     background-color: var(--color-ui-01);
     width: 7em;
