--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -1179,8 +1179,11 @@ sidecar.no-limits-data .activation-estimated-cost-container {
     /* no tooltips under a blurry element */
     display: none;
 }
+sidecar .present-as-quotation {
+    border-left-color: var(--color-base02);
+}
 .present-as-quotation {
-    border-left: 0.375em solid var(--color-base01);
+    border-left: 0.25em solid var(--color-base01);
     padding: 0.375em 0 0.375em 0.375em;
     margin: 0.375em 0;
 }
@@ -1458,7 +1461,7 @@ sidecar .result-as-table .big-top-pad:first-child {
 /* Track */
 .scrollable::-webkit-scrollbar-track, .scrollable-x::-webkit-scrollbar-track, .scrollable-auto::-webkit-scrollbar-track { box-shadow: inset 0 0 8px var(--color-scrollbar-track); border-radius: 10px; border-radius: 10px; }
 /* Handle */
-.scrollable::-webkit-scrollbar-thumb, .scrollable-x::-webkit-scrollbar-thumb, .scrollable-auto::-webkit-scrollbar-thumb { border-radius: 10px; background: var(--color-scrollbar-thumb); box-shadow: inset 0 0 2px var(--color-scrollbar-thumb-border); }
+.scrollable::-webkit-scrollbar-thumb, .scrollable-x::-webkit-scrollbar-thumb, .scrollable-auto::-webkit-scrollbar-thumb { border-radius: 10px; background: var(--color-scrollbar-thumb); border: 1px solid var(--color-scrollbar-thumb-border); outline: 1px solid var(--color-scrollbar-thumb-outline); }
 .result-as-table.scrollable::-webkit-scrollbar-thumb, .result-as-table.scrollable::-webkit-scrollbar-track {
     box-shadow: none;
 }
@@ -2323,7 +2326,7 @@ sidecar .usage-error-wrapper .hideable {
     background: transparent;
 }
 .usage-error-wrapper h3, .usage-error-wrapper h4 {
-    font-weight: 300;
+    font-weight: 400;
     font-size: 1.125em;
     color: var(--color-brand-01);
     font-family: var(--font-sans-serif);
@@ -2794,9 +2797,10 @@ body {
     --color-ok: var(--color-green);
     --color-error: var(--color-red);
 
-    --color-scrollbar-thumb: var(--color-ui-04);
-    --color-scrollbar-thumb-border: var(--color-brand-01);
-    --color-scrollbar-track: var(--color-ui-05);
+    --color-scrollbar-thumb: black;
+    --color-scrollbar-thumb-border: var(--color-base04);
+    --color-scrollbar-thumb-outline: transparent;
+    --color-scrollbar-track: transparent;
 
     --font-sans-serif: "IBM Plex Sans", sans-serif;
     --font-monospace: "IBM Plex Mono","DejaVu Sans Mono","Bitstream Vera Sans Mono",Courier,monospace;
